# nextgen-bank-fastapi

./: .gitignore  local.yml  main.py  pyproject.toml
.envs/: .env.example  .env.local
backend/app/: main.py
src/: .gitignore
src/backend/app/: main.py
src/backend/app/api/: main.py
src/backend/app/api/routes/: home.py
src/backend/app/core/: config.py  db.py  logging.py
