[project]
name = "nextgen-bank-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.14.0",
    "argon2-cffi==23.1.0",
    "asyncpg==0.30.0",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.5.0",
    "loguru==0.7.3",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic-settings==2.7.0",
    "sqlmodel==0.0.22",
    "uvicorn>=0.46.0",
]
